# vehicle_parking_detect

./: .clang-format  .gitignore  CMakeLists.txt  OPTIMIZATION_README.md  build.sh  main.cpp  optimized_config.ini  run.sh  test_park.py  test_park_v2.py  utils.h
include/: cuda_memory_pool.h  vehicle_parking_detect.h
src/: cuda_features.cu  cuda_features_optimized.cu  cuda_memory_pool.cu  vehicle_parking_detect.cpp  vehicle_parking_detect_optimized.cpp  world_coord.cu
